--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@syncfusion/ej2-react-richtexteditor": "^19.4.50",
     "@syncfusion/ej2-react-schedule": "^19.4.50",
     "axios": "^0.27.2",
+    "datatables": "^1.10.18",
+    "jquery": "^3.6.1",
     "react": "^17.0.2",
     "react-ajax": "^0.1.1",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "styled-components": "^5.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
